--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -80,12 +80,15 @@
               </div>
               <%# //Store name %>
 
+
+
+
               <%# Logo %>
               <% if store.has_logo? %>
                 <div class="stores-list__logo hide-fully--palm">
                   <div class="vert-align">
                     <div class="vert-align__inner">
-                      <span class="preloader preloader--light" data-image-src="<%= store.logo(width: 168, height: 62, pad: true, background: 'ffffff') %>" data-image-alt="<%= "#{store.name} logo" %>" data-image-itemprop="photo">
+                      <span class="preloader preloader--light" data-image-src="<%= cl_image_path(store.logo, type: "fetch", width: 168, height: 62, quality: 25, crop: :pad, background: 'rgb:FFFFFF') %>" data-image-alt="<%= "#{store.name} logo" %>" data-image-itemprop="photo">
                         <span class="preloader__spinner"></span>
                         <em class="hide-visually">Loading, please wait&#8230;</em>
                       </span>
