--- a/app/assets/stylesheets/partials/modules/_hero.scss
+++ b/app/assets/stylesheets/partials/modules/_hero.scss
@@ -12,25 +12,28 @@
 
 .hero {
   @include to-rem(height, 220);
+  @include to-rem(margin-bottom, $spacing-base);
   color: #fff;
 
   @include respond-min($non-palm) {
     @include to-rem(height, 379);
+    @include to-rem(margin-bottom, $spacing-dbl);
   }
 }
 
   .hero__inner {
-    @include respond-min($non-palm) {
+    position: relative;
+
+    @include respond-min($lap-lrg) {
       text-align: left;
     }
   }
 
     .hero__icon {
-      @include font-size(30, 1);
+      @include font-size(30);
 
       @include respond-min($non-palm) {
-        @include font-size(50, 1);
-        float: left;
+        @include font-size(50);
       }
     }
 
@@ -41,6 +44,13 @@
       @include respond-min($non-palm) {
         @include font-size(60);
       }
+    }
+
+    /* Shared styles */
+    .hero__icon,
+    .hero__hdr {
+      display: inline-block;
+      vertical-align: middle;
     }
 
     .hero__txt {
