--- a/app/views/centre_info/show.html.erb
+++ b/app/views/centre_info/show.html.erb
@@ -34,7 +34,7 @@
   <h2>Parking</h2>
   <div class="grid grid--gutter-dbl">
     <div class="grid__item non-palm-one-half">
-      <div class="box islet island--btm-non-palm">
+      <div class="box box--mrg-btm-half islet island--non-palm">
         <table cellspacing="0" class="table-striped">
           <caption class="hide-visually">Parking rates</caption>
           <thead>
