--- a/app/assets/stylesheets/partials/abstractions/_fine-print.scss
+++ b/app/assets/stylesheets/partials/abstractions/_fine-print.scss
@@ -11,13 +11,15 @@
 */
 
 .fine-print {
-  @include to-rem(margin, 10 0);
   @include to-rem(font-size, 11);
-  display: block;
   font-style: italic;
 }
 
 /* --Extenders-- */
 
 /* Centre aligns the text */
-.fine-print--center {text-align: center;}
+.fine-print--center {
+  /* Need this as it's most likely we'l apply the classes to a <small> element */
+  display: block;
+  text-align: center;
+}
