--- a/app/views/layouts/_section_nav.html.erb
+++ b/app/views/layouts/_section_nav.html.erb
@@ -27,7 +27,7 @@
 
     <!-- Centre selector -->
     <div class="centre-selector">
-      <div class="centre-selector-control" id="centre_selector">
+      <div class="centre-selector-control toggle-visibility" id="centre_selector">
         <label for="centre_select">Show products at</label>
 
         <select ng-controller="CentreSelectorController"
