--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -108,6 +108,7 @@ Global stylesheet
 @import "partials/abstractions/vertical-alignment";
 @import "partials/abstractions/preserve-aspect-ratio";
 @import "partials/abstractions/drop-down";
+@import "partials/abstractions/toggle-visibility";
 @import "partials/abstractions/box";
 @import "partials/abstractions/toggle-content";
 @import "partials/abstractions/angular-cloak";
