--- a/app/assets/stylesheets/partials/buttons/_main.scss
+++ b/app/assets/stylesheets/partials/buttons/_main.scss
@@ -39,11 +39,13 @@
   &:hover,
   &:focus {color: #fff;}
 
-  /* Pseudo classes */
+  /* Hover/focus states */
   &:hover,
   &:focus {background-color: lighten($color-cta-green, 10%);}
 
-  &:active {box-shadow: inset 0 1px 0 rgba(#000, 0.4);}
+  /* Active state */
+  &:active,
+  &.is-active {box-shadow: inset 0 1px 0 rgba(#000, 0.4);}
 }
 
 	/* --Extenders-- */
@@ -57,7 +59,7 @@
 		&[disabled],
 		&.is-disabled {background-color: $color-cta-blue;}
 
-		/* Pseudo classes */
+		/* Hover/focus states */
 		&:hover,
 		&:focus {background-color: lighten($color-cta-blue, 10%);}
 	}
@@ -69,7 +71,7 @@
 		&[disabled],
 		&.is-disabled {background-color: $color-med-txt;}
 
-		/* Pseudo classes */
+		/* Hover/focus states */
 		&:hover,
 		&:focus {background-color: lighten($color-med-txt, 10%);}
 	}
@@ -89,10 +91,13 @@
 		&:hover,
 		&:focus {color: $color-dark-txt;}
 
+		/* Hover/focus states */
 		&:hover,
 		&:focus {background-color: lighten($color-grey-3, 3%);}
 
-		&:active {box-shadow: inset 0 1px 0 rgba(#000, 0.15);}
+		/* Active state */
+		&:active,
+		&.is-active {box-shadow: inset 0 1px 0 rgba(#000, 0.15);}
 	}
 
 	/* White */
@@ -110,10 +115,13 @@
 		&:hover,
 		&:focus {color: $color-dark-txt;}
 
+		/* Hover/focus states */
 		&:hover,
 		&:focus {background-color: lighten($color-off-white, 2%);}
 
-		&:active {box-shadow: inset 0 1px 0 rgba(#000, 0.15);}
+		/* Active state */
+		&:active,
+		&.is-active {box-shadow: inset 0 1px 0 rgba(#000, 0.15);}
 	}
 
 	/* Compact - decrease padding */
