--- a/app/assets/javascripts/support/mediaqueries.js.erb
+++ b/app/assets/javascripts/support/mediaqueries.js.erb
@@ -1,12 +1,14 @@
-Modernizr.load([
-  {
-    test: (!!window.matchMedia),
-    nope: [
-      '<%= asset_path "matchMedia/matchMedia.js" %>',
-      '<%= asset_path "matchMedia/matchMedia.addListener.js" %>'
-    ]
-  },
-  {
-    load: ['<%= asset_path "enquire.js" %>', '<%= asset_path "init/enquire.js" %>'],
-  }
-]);
+// FIXME Preferably this would be non-blocking
+if(!window.matchMedia) {
+  $script('<%= asset_path "matchMedia/matchMedia.js" %>', function() {
+    $script('<%= asset_path "matchMedia/matchMedia.addListener.js" %>', function() {
+      $script('<%= asset_path "enquire.js" %>', function() {
+        $script('<%= asset_path "init/enquire.js" %>');
+      });
+    });
+  });
+} else {
+  $script('<%= asset_path "enquire.js" %>', function() {
+    $script('<%= asset_path "init/enquire.js" %>');
+  });
+}
