fixes maps on products, deals, events pages

--- a/app/views/shared/_map.html.erb
+++ b/app/views/shared/_map.html.erb
@@ -32,7 +32,7 @@
 <% if load_immediately %>
   <% content_for :javascript do %>
     <%= javascript_tag do %>
-      new map.Micello().load().zoomTo(<%= store_id %>);
+      new map.Micello().load().setTarget(<%= store_id %>).showLevel().zoom().detail().highlight();
     <% end %>
   <% end %>
 <% end %>
