Making the product browse sort select list sit in the middle of it's container

--- a/app/assets/stylesheets/partials/modules/_filters.scss
+++ b/app/assets/stylesheets/partials/modules/_filters.scss
@@ -129,6 +129,12 @@ $filter-drop-down-width: 285;
   .filters__sort {
     @include font-size($font-size-sml);
     position: absolute;
-    top: 0;
+    top: 50%;
     right: 0;
+    @include translate(0, -50%);
+
+    /* Old IE */
+    @include old-ie {
+      top: 0;
+    }
   }
