--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -312,9 +312,8 @@
 
   <%# Sort %>
   <div class="filters__sort">
-    <label>
-      <span class="hide-visually">Sort product results by</span>
-      <select ng-model="sort" ng-change="filterSearch('sort')" ng-options="option.code as option.description for option in search.sortOptions | filter:{display: true}"></select>
+      <label for="filters-sort" class="hide-visually">Sort product results by</label>
+      <select ng-model="sort" ng-change="filterSearch('sort')" ng-options="option.code as option.description for option in search.sortOptions | filter:{display: true}" id="filters-sort"></select>
     </label>
   </div>
   <%# //Sort %>
