Increasing box shadow for product browse filter drop downs - WSF-5084

--- a/app/assets/stylesheets/partials/abstractions/_box.scss
+++ b/app/assets/stylesheets/partials/abstractions/_box.scss
@@ -18,6 +18,9 @@
 /* Heavy */
 .box--heavy {@include box-heavy;}
 
+/* Drop down */
+.box--drop-down {@include box-drop-down;}
+
 /* Torn paper treatment */
 .box--torn {
   background: none;
