--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -57,7 +57,7 @@
     <%# //Drop down trigger (palm) %>
 
     <%# Drop down target (palm) %>
-    <div id="filters" class="drop-down-menu__target drop-down box">
+    <div id="filters" class="drop-down-menu__target drop-down box box--drop-down">
       <span class="arrow arrow--up"></span>
 
       <ul class="filters__list">
