--- a/app/assets/stylesheets/partials/utils/_vars.scss
+++ b/app/assets/stylesheets/partials/utils/_vars.scss
@@ -355,5 +355,9 @@ $z-index-max: 2147483647 !default;
 /* Common border radius */
 $border-radius: 3px !default;
 
-/* Common box shadow */
+/* Common box shadows */
 $box-shadow: 0 1px 2px rgba(#000, 0.25) !default;
+
+$box-shadow-heavy: 0 0 7px rgba(#000, 0.3) !default;
+
+$box-shadow-drop-down: 0 1px 3px rgba(#000, 0.5) !default;
