--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -192,7 +192,7 @@
             setup: palmView
           }, true);
         });
-      }, function() { console.log(this, arguments); });
+      }, $script);
     }());
 
     $('.js-defer-image-load-container').deferImages({matchMedia: 'all and (min-width: 40.0625em)'});
