--- a/app/assets/javascripts/support/mediaqueries.js.erb
+++ b/app/assets/javascripts/support/mediaqueries.js.erb
@@ -1,14 +1,18 @@
+function loadDependency(dep) {
+  $script(dep, dep);
+}
+
 // FIXME Preferably this would be non-blocking
 if(!window.matchMedia) {
   $script('<%= asset_path "matchMedia/matchMedia.js" %>', function() {
     $script('<%= asset_path "matchMedia/matchMedia.addListener.js" %>', function() {
       $script.ready('<%= asset_path "enquire.js" %>', function() {
         $script('<%= asset_path "init/enquire.js" %>');
-      }, $script);
+      }, loadDependency);
     });
   });
 } else {
-  $script('<%= asset_path "enquire.js" %>', function() {
+  $script.ready('<%= asset_path "enquire.js" %>', function() {
     $script('<%= asset_path "init/enquire.js" %>');
-  });
+  }, loadDependency);
 }
